fix(blog): remove scrollToTop, wider scrollbar instead

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -9,7 +9,7 @@
     --nav-height-mobi: 46px;
     --nav-height-sm: 60px;
     --nav-height-lg: 60px;
-    --scroll-width-md: 12px;
+    --scroll-width-md: 16px;
     --scroll-width-sm: 0px;
     --max-width-sm: 840px;
     --max-width-md: 1040px;
